# Quark

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
package/: Dockerfile  config.example.toml  docker-compose.yml  install.sh  uninstall.sh
package/service/: quark  quark.service
src/: config.rs  error.rs  http_response.rs  ipc.rs  load_balancing.rs  logs.rs  main.rs  middleware.rs  proxy_handler.rs  serve_file.rs  server.rs  utils.rs
src/config/: tls.rs  toml_model.rs
src/server/: handler.rs  serve_file.rs  server_utils.rs
tools/: build.sh
