[package]
name = "quark"
version = "0.3.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio-rustls = "0.26.2"
rustls = "0.23.27"
argh = "0.1.13"
rustls-pemfile = "2.2.0"
toml = "0.8.22"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.31"
x509-parser = "0.17.0"
rustls-pki-types = "1.12.0"
notify = "8.0.0"
arc-swap = "1.7.1"
mime_guess = "2.0.5"
tokio-util = "0.7.15"
socket2 = "0.5.10"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "env-filter",
  "fmt",
  "ansi",
] }
tracing-appender = "0.2.3"
nix = { version = "0.30.1", features = ["user"] }
bincode = "2.0.1"
twox-hash = { version = "2.1.1", features = ["xxhash3_64"] }
time = "0.3.41"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
